updated gitignore to ingore Vagrant box files

--- a/.gitignore
+++ b/.gitignore
@@ -64,8 +64,7 @@ target/
 .LSOverride
 
 # Icon must end with two \r
-Icon
-
+Icon
 # Thumbnails
 ._*
 
@@ -98,3 +97,6 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+
+# Vagrant boxes
+.vagrant/
